alignment issue fix

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -12,7 +12,7 @@
   initial-value: 0turn;
 }
 .footer_section {
-  background: linear-gradient(359.8deg, rgba(0, 0, 0, 0.46) 5.16%, rgba(97, 97, 97, 0.22) 99.83%);
+  background: linear-gradient(90deg, #000000, #000e0e);
   background-color: #000000;
   padding: 150px 0px 0;
 }
