--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -11,6 +11,10 @@ li {
   padding: 0;
 }
 
+section {
+  background: linear-gradient(90deg, #000000, #000e0e);
+}
+
 @keyframes moveAnimation {
   0% {
     transform: translateX(0);
@@ -26,7 +30,6 @@ li {
 }
 #fz_product_list_hero_sec {
   position: relative;
-  background: linear-gradient(90deg, rgba(0, 131, 131, 0.0862745098) 0%, rgba(0, 131, 131, 0.0862745098) 100%);
   padding-bottom: 96px;
 }
 #fz_product_list_hero_sec canvas {
@@ -69,8 +72,8 @@ li {
   --h: 40px;
   --icon-size: 25px;
   padding: 0px 28px !important;
-  width: 150px !important;
-  --w: 164px !important;
+  width: 162px !important;
+  --w: 188px !important;
 }
 @media (min-width: 992px) and (max-width: 1024px) {
   #fz_product_list_hero_sec .product_list_hero .cmn-btn {
@@ -128,9 +131,6 @@ li {
   left: 10px !important;
 }
 
-#fz_product_list_banner_sec {
-  background: linear-gradient(90deg, rgba(0, 131, 131, 0.0862745098) 0%, rgba(0, 131, 131, 0.0862745098) 100%);
-}
 #fz_product_list_banner_sec .fz_product_list_banner_img {
   width: 100%;
   height: 100%;
@@ -139,7 +139,6 @@ li {
 #fz_product_list_feature {
   position: relative;
   overflow: hidden;
-  background: linear-gradient(90deg, rgba(0, 131, 131, 0.0862745098) 0%, rgba(0, 131, 131, 0.0862745098) 100%);
 }
 #fz_product_list_feature .product_list_feature_head h3 {
   font-size: 192px;
@@ -305,9 +304,8 @@ li {
 }
 .fz_features_sec button {
   border-radius: 0px 10px 10px 0px !important;
-  margin-bottom: 5px;
-  padding: 15px;
-  border-left: 3px solid transparent;
+  padding: 20px;
+  border-left: 3px solid rgba(252, 252, 252, 0.1607843137);
 }
 .fz_features_sec button.active {
   background-color: #33392f !important;
@@ -322,7 +320,7 @@ li {
 .fz_features_sec button .fz_feature_tab_heading {
   display: flex;
   align-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
 }
 @media (max-width: 991px) {
   .fz_features_sec button .fz_feature_tab_heading {
@@ -331,14 +329,15 @@ li {
   }
 }
 .fz_features_sec button .fz_feature_tab_heading svg {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   object-fit: contain;
 }
 .fz_features_sec button .fz_feature_tab_heading h4 {
-  padding-left: 20px;
+  padding-left: 16px;
   font-size: 24px;
   color: #ffffff;
+  text-align: left;
 }
 @media (max-width: 991px) {
   .fz_features_sec button .fz_feature_tab_heading h4 {
@@ -465,6 +464,7 @@ li {
 .fz_ai_enhance_sec .fz_ai_enhance_text .fz_enhance_para {
   font-size: 16px;
   color: #ffffff;
+  font-weight: 300;
 }
 @media (max-width: 991px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text .fz_enhance_para {
@@ -485,8 +485,8 @@ li {
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li {
   font-size: 16px;
   font-weight: 300;
-  padding: 10px 20px;
-  border-radius: 30px;
+  padding: 8px 20px;
+  border-radius: 20px;
   background-color: #0e1d20;
   margin-bottom: 12px;
   display: inline-flex;
@@ -520,6 +520,11 @@ li {
 .fz_ai_enhance_sec .fz_enhance_col {
   display: flex;
   align-items: center;
+  padding-left: 80px;
+}
+.fz_ai_enhance_sec .fz_enhance_col.left-space {
+  padding-right: 80px;
+  padding-left: 0px;
 }
 .fz_ai_enhance_sec .fz_enhance_img_col {
   display: flex;
@@ -666,8 +671,8 @@ li {
   --h: 40px;
   --icon-size: 25px;
   padding: 0px 28px !important;
-  width: 156px !important;
-  --w: 176px !important;
+  width: 160px !important;
+  --w: 182px !important;
 }
 @media (min-width: 992px) and (max-width: 1024px) {
   .fz_get_in_touch .get_in_touch .get_touch_in_content .get_touch_btn a {
@@ -741,6 +746,9 @@ li {
   }
 }
 
+#fz_product_range {
+  padding: 100px 0px;
+}
 #fz_product_range h2 {
   color: #ffffff;
   font-size: 48px;
@@ -805,8 +813,8 @@ li {
   --h: 40px;
   --icon-size: 25px;
   padding: 0px 28px !important;
-  width: 150px !important;
-  --w: 156px !important;
+  width: 164px !important;
+  --w: 190px !important;
 }
 @media (min-width: 992px) and (max-width: 1024px) {
   #fz_product_range #product-range .fz_product-content .cmn-btn {
@@ -1032,8 +1040,8 @@ li {
   --h: 40px;
   --icon-size: 25px;
   padding: 0px 28px !important;
-  width: 150px !important;
-  --w: 156px !important;
+  width: 164px !important;
+  --w: 182px !important;
 }
 @media (min-width: 992px) and (max-width: 1024px) {
   #fin_bankz_sec .fin_bankz .fin_bankz_content .cmn-btn {
